[gd_scene load_steps=3 format=2]

[ext_resource path="res://environment/pots/pot_pieces.png" type="Texture" id=1]
[ext_resource path="res://environment/pots/PotBreak.gd" type="Script" id=2]

[node name="PotBreak1" type="Node2D"]
script = ExtResource( 2 )

[node name="PotPieceBottom" type="RigidBody2D" parent="."]
collision_layer = 0

[node name="Sprite" type="Sprite" parent="PotPieceBottom"]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
vframes = 3
hframes = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PotPieceBottom"]
position = Vector2( 0, -4 )
polygon = PoolVector2Array( -3, 5, 0, 2, 1, 2, 3, 4, 3, 6, 2, 7, -2, 7, -3, 6 )

[node name="PotPieceLeft" type="RigidBody2D" parent="."]
position = Vector2( -1, -3 )
collision_layer = 0

[node name="Sprite" type="Sprite" parent="PotPieceLeft"]
position = Vector2( 0.734835, -1.13258 )
texture = ExtResource( 1 )
vframes = 3
hframes = 6
frame = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PotPieceLeft"]
position = Vector2( 1, -1 )
polygon = PoolVector2Array( -3, 4, 0, 1, 0, -2, -1, -2, -1, 1, -2, 1, -3, 2 )

[node name="PotPieceRight" type="RigidBody2D" parent="."]
position = Vector2( 1.26516, -4.13258 )
collision_layer = 0

[node name="Sprite" type="Sprite" parent="PotPieceRight"]
position = Vector2( -1, 0 )
texture = ExtResource( 1 )
vframes = 3
hframes = 6
frame = 12

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PotPieceRight"]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 3, 3, 0, 0, 0, -2, 1, -2, 1, 0, 3, 2 )

[node name="Tween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
